# vim: set noexpandtab:

2012-06-18 Steve
	* Fixed event timer calculation
	* Added helper script for tagging package: scripts/makeTags.sh
	* Tagging SusyNtuple-00-00-04

2012-06-18 Steve
	* Added pdfSF weight to Event class, for reweighting 7TeV -> 8TeV
	* Tagging SusyNtuple-00-00-03

2012-06-17 Steve
	* Added TStopwatch for checking processing time

2012-06-11 Steve
	* Updating syntax and conventions for code consistency:
		* SYSTEMATIC -> SusyNtSys
		* NOM -> NtSys_NOM
		* etc.
	* Removed 'using namespace' statements from headers (grr)
	* Tagging SusyNtuple-00-00-02

2012-06-01 Matt
	* Made cutflow dump all results from three channels
	* Moved getDiLepEvtType(Leptons) to SusyDefs so can be used outside trigger class
	* Note: If you want to inherit methods from Susy2LepCutflow, maybe need to
	  modify the way evt counts are stored. Not pressing right now, but maybe update in
	  the future.
	* The above has been fixed. You can now inherit from CF. If you don't specify event
	  type it will just save everything under unknown and code shouldn't crash.

2012-05-31 Matt
	* Tagging SusyNtuple-00-00-01

2012-05-30 Matt
	* Moved directory to Institutes/UCIrvine/SUSYAnalysis
	* Added avgMu, cluster energy, and jet truth label to SusyNt
	* Meff function included in SusyDefs	

#------------------------------------------------------------------------------------
# Prior to the Merge 2012-05-30
#------------------------------------------------------------------------------------

2012-05-28 Serhan Mete <amete@cern.ch>
	* Root/Susy3LepCutflow.cxx/h: Switched off event details output
	* Root/SusyNtTools.cxx: Added RemoveSFOSPair to the baseline selection for 3 lepton

2012-05-25 Serhan Mete <amete@cern.ch>
	* Root/Susy3LepCutflow.cxx/h: Added handle to control output text file

2012-05-25 Matt
	* Changed jet cut: 20 GeV for 3Lep and 30 GeV for 2Lep
	
2012-05-23 Serhan Mete <amete@cern.ch>
	* Root/Susy3LepCutflow.cxx: Remove dependency on MultiLep

2012-05-23 Matt