@@ -29,7 +29,7 @@ namespace Susy
 //-----------------------------------------------------------------------------------
 
 // This should not be defined in this pkg.  It is very misleading.
-const float GeV = 1000.;
+//const double GeV = 1000.;
 const float MZ = 91.2;
 
 //-----------------------------------------------------------------------------------
@@ -184,6 +184,7 @@ DiLepEvtType getDiLepEvtType(const LeptonVector& leptons);
 // Trigger enums - try to respect backwards compatibility by adding to the end
 enum TrigBit
 {
+  // 2011 triggers
   BIT_e20_medium = 0,
   BIT_e22_medium,
   BIT_e22vh_medium1,
@@ -194,10 +195,18 @@ enum TrigBit
   BIT_mu18_medium,
   BIT_2mu10_loose,
   BIT_e10_medium_mu6,
+
+  // 2012 triggers
+  BIT_e24vhi_medium1,
+  BIT_2e12Tvh_loose1,
+  BIT_mu24i_tight,
+  BIT_2mu13,
+  BIT_e12Tvh_medium1_mu8,
+
   N_TRIG
 };
 
-// Trigger bit masks - can represent multiple chains at once
+// 2011 Trigger bit masks - can represent multiple chains at once
 // electron
 const uint TRIG_e20_medium      = 1<<BIT_e20_medium;
 const uint TRIG_e22_medium      = 1<<BIT_e22_medium;
@@ -211,6 +220,13 @@ const uint TRIG_mu18_medium     = 1<<BIT_mu18_medium;
 const uint TRIG_2mu10_loose     = 1<<BIT_2mu10_loose;
 // e-mu
 const uint TRIG_e10_medium_mu6  = 1<<BIT_e10_medium_mu6;
+
+// 2012 Trigger bit masks
+const uint TRIG_e24vhi_medium1  = 1<<BIT_e24vhi_medium1;
+const uint TRIG_2e12Tvh_loose1  = 1<<BIT_2e12Tvh_loose1;
+const uint TRIG_e12Tvh_medium1_mu8 = 1<<BIT_e12Tvh_medium1_mu8;
+const uint TRIG_mu24i_tight     = 1<<BIT_mu24i_tight;
+const uint TRIG_2mu13           = 1<<BIT_2mu13;
 
 // Trigger chain names, for convenience
 stringvector getTrigChains();
